fix mobile pagination spacing
#2yjmuw

--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -43,6 +43,10 @@
 	padding-top: rem-calc(150);
 	width: 100%;
 
+	@include bp-down(sm) {
+		padding-top: rem-calc(60);
+	}
+
 	@media screen {
 
 		.screen-reader-text {
@@ -82,6 +86,20 @@
 			@include bp-down(sm) {
 				display: none;
 			}
+		}
+	}
+}
+
+.paged.has-sidebar {
+
+	.navigation.pagination {
+
+		@include bp-between( sm, md ) {
+			margin-bottom: rem-calc(150);
+		}
+
+		@include bp-down(sm) {
+			margin-bottom: rem-calc(60);
 		}
 	}
 }
